bash/log.txt
please enter database password: 
Port
5432
Host
geomagnetic-storm-model.cqicqdey3ckh.us-east-2.rds.amazonaws.com
australia-oceania
Traceback (most recent call last):
  File "/home/ec2-user/anaconda3/envs/myenv/lib/python3.9/runpy.py", line 197, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/home/ec2-user/anaconda3/envs/myenv/lib/python3.9/runpy.py", line 87, in _run_code
    exec(code, run_globals)
  File "/home/ec2-user/anaconda3/envs/myenv/lib/python3.9/cProfile.py", line 190, in <module>
    main()
  File "/home/ec2-user/anaconda3/envs/myenv/lib/python3.9/cProfile.py", line 171, in main
    code = compile(fp.read(), progname, 'exec')
  File "Transnet.py", line 1184
    if(self.voltage_levels.split('|') not self.voltage_levels.split('|')[0])
                                          ^
SyntaxError: invalid syntax
